tiles in french, half done

--- a/monopoly/src/tile_fr.properties
+++ b/monopoly/src/tile_fr.properties
@@ -2,9 +2,9 @@
 #File Name : tile_en.properties
 #
 
-startMoney =30000
+startMoney =15000
 
-tile0-name = Start
+tile0-name = Go
 tile0-price = NULL
 tile0-houseCost = NULL
 tile0-hotelCost = NULL
@@ -20,24 +20,24 @@ tile0-coordX = 10
 tile0-coordY = 10
 tile0-rgb = NULL
 
-tile1-name = Coire Kornplatz
-tile1-price = 1200
-tile1-houseCost = 1000
-tile1-hotelCost = 1000
-tile1-rent = 40
-tile1-rent1house = 200 
-tile1-rent2house = 600
-tile1-rent3house = 1800
-tile1-rent4house = 3200
-tile1-renthotel = 5000
+tile1-name = Mediterranean Avenue
+tile1-price = 60
+tile1-houseCost = 50
+tile1-hotelCost = 50
+tile1-rent = 2
+tile1-rent1house = 10 
+tile1-rent2house = 30
+tile1-rent3house = 90
+tile1-rent4house = 160
+tile1-renthotel = 250
 tile1-group = purple
-tile1-mortgageValue=600
+tile1-mortgageValue=30
 tile1-coordX = 9
 tile1-coordY = 10
 tile1-rgb = 0xDCD0FF
 
 #TERRAIN
-tile2-name = Chancellerie
+tile2-name = Community Chest
 tile2-price = NULL
 tile2-houseCost = NULL
 tile2-hotelCost = NULL
@@ -53,24 +53,24 @@ tile2-coordX = 8
 tile2-coordY = 10
 tile2-rgb = NULL
 
-tile3-name = Schaffhouse Vordergasse
-tile3-price = 1200
-tile3-houseCost = 1000
-tile3-hotelCost = 1000
-tile3-rent = 80
-tile3-rent1house = 400 
-tile3-rent2house = 1200
-tile3-rent3house = 3600
-tile3-rent4house = 6400
-tile3-renthotel = 9000
+tile3-name = Baltic Avenue
+tile3-price = 60
+tile3-houseCost = 50
+tile3-hotelCost = 50
+tile3-rent = 4
+tile3-rent1house = 20 
+tile3-rent2house = 60
+tile3-rent3house = 180
+tile3-rent4house = 320
+tile3-renthotel = 480
 tile3-group = purple
-tile3-mortgageValue=600
+tile3-mortgageValue=30
 tile3-coordX = 7
 tile3-coordY = 10
 tile3-rgb = 0xDCD0FF
 
 #TERRAIN
-tile4-name = Impôt sur le revenu
+tile4-name = Income Tax
 tile4-price = NULL
 tile4-houseCost = NULL
 tile4-hotelCost = NULL
@@ -86,36 +86,36 @@ tile4-coordX = 6
 tile4-coordY = 10
 tile4-rgb = NULL
 
-tile5-name = Union des chemins de fer privés
-tile5-price = 4000
+tile5-name = Reading Railroad
+tile5-price = 200
 tile5-houseCost = NULL
 tile5-hotelCost = NULL
-tile5-rent = 500
+tile5-rent = 25
 tile5-rent1house = NULL 
 tile5-rent2house = NULL
 tile5-rent3house = NULL
 tile5-rent4house = NULL
 tile5-renthotel = NULL
 tile5-group = railroad
-tile5-mortgageValue= 2000
+tile5-mortgageValue= 100
 tile5-coordX = 5
 tile5-coordY = 10
 tile5-rgb = NULL
 
 
 
-tile6-name = Aarau Rathausplatz
-tile6-price = 2000
-tile6-houseCost = 1000
-tile6-hotelCost = 1000
-tile6-rent = 120
-tile6-rent1house = 600 
-tile6-rent2house = 1800
-tile6-rent3house = 5400
-tile6-rent4house = 8000
-tile6-renthotel = 1100
+tile6-name = Oriental Avenue
+tile6-price = 100
+tile6-houseCost = 50
+tile6-hotelCost = 50
+tile6-rent = 6
+tile6-rent1house = 30 
+tile6-rent2house = 90
+tile6-rent3house = 270
+tile6-rent4house = 400
+tile6-renthotel = 550
 tile6-group = cyan
-tile6-mortgageValue=1000
+tile6-mortgageValue=50
 tile6-coordX = 4
 tile6-coordY = 10
 tile6-rgb = 0x00FFFF
@@ -137,41 +137,41 @@ tile7-coordY = 10
 tile7-rgb = NULL
 
 
-tile8-name = Neuenburg Place Pury
-tile8-price = 2000
-tile8-houseCost = 1000
-tile8-hotelCost = 1000
-tile8-rent = 120
-tile8-rent1house = 600
-tile8-rent2house = 1800
-tile8-rent3house = 5400
-tile8-rent4house = 8000
-tile8-renthotel = 11000
+tile8-name = Vermont Avenue
+tile8-price = 100
+tile8-houseCost = 50
+tile8-hotelCost = 50
+tile8-rent = 6
+tile8-rent1house = 30
+tile8-rent2house = 90
+tile8-rent3house = 270
+tile8-rent4house = 400
+tile8-renthotel = 550
 tile8-group = cyan
-tile8-mortgageValue=1000
+tile8-mortgageValue=50
 tile8-coordX = 2
 tile8-coordY = 10
 tile8-rgb = 0x00FFFF
 
 
-tile9-name = Thoune Hauptgasse
-tile9-price = 2400
-tile9-houseCost = 1000
-tile9-hotelCost = 1000
-tile9-rent = 160
-tile9-rent1house = 800
-tile9-rent2house = 2000
-tile9-rent3house = 6000
-tile9-rent4house = 9000
-tile9-renthotel = 12000
+tile9-name = Oriental Avenue
+tile9-price = 120
+tile9-houseCost = 50
+tile9-hotelCost = 50
+tile9-rent = 8
+tile9-rent1house = 40
+tile9-rent2house = 100
+tile9-rent3house = 300
+tile9-rent4house = 450
+tile9-renthotel = 600
 tile9-group = cyan
-tile9-mortgageValue=1200
+tile9-mortgageValue=60
 tile9-coordX = 1
 tile9-coordY = 10
 tile9-rgb = 0x00FFFF
 
 
-tile10-name = Prison
+tile10-name = Jail
 tile10-price = NULL
 tile10-houseCost = NULL
 tile10-hotelCost = NULL
@@ -187,24 +187,24 @@ tile10-coordX = 0
 tile10-coordY = 10
 tile10-rgb = NULL
 
-tile11-name = Bâle Steinenvorstadt
-tile11-price = 2800
-tile11-houseCost = 1000
-tile11-hotelCost = 1000
-tile11-rent = 200
-tile11-rent1house = 1000
-tile11-rent2house = 3000
-tile11-rent3house = 9000
-tile11-rent4house = 12500
-tile11-renthotel = 15000
+tile11-name = St. Charles Place
+tile11-price = 140
+tile11-houseCost = 100
+tile11-hotelCost = 100
+tile11-rent = 10
+tile11-rent1house = 50
+tile11-rent2house = 150
+tile11-rent3house = 450
+tile11-rent4house = 625
+tile11-renthotel = 750
 tile11-group = magenta
-tile11-mortgageValue=1400
+tile11-mortgageValue=70
 tile11-coordX = 0
 tile11-coordY = 9
 tile11-rgb = 0xFF00FF
 
-tile12-name = Usines Électriques
-tile12-price = 3000
+tile12-name = Electric Company
+tile12-price = 150
 tile12-houseCost = NULL
 tile12-hotelCost = NULL
 tile12-rent = NULL
@@ -214,78 +214,78 @@ tile12-rent3house = NULL
 tile12-rent4house = NULL
 tile12-renthotel = NULL
 tile12-group = utility
-tile12-mortgageValue= 1500
+tile12-mortgageValue= 75
 tile12-coordX = 0
 tile12-coordY = 8
 tile12-rgb = NULL
 
-tile13-name = Soleure Hauptgasse
-tile13-price = 2800
-tile13-houseCost = 1000
-tile13-hotelCost = 1000
-tile13-rent = 200
-tile13-rent1house = 1000
-tile13-rent2house = 3000
-tile13-rent3house = 6000
-tile13-rent4house = 9000
-tile13-renthotel = 12500
+tile13-name = States Avenue
+tile13-price = 140
+tile13-houseCost = 100
+tile13-hotelCost = 100
+tile13-rent = 10
+tile13-rent1house = 50
+tile13-rent2house = 150
+tile13-rent3house = 450
+tile13-rent4house = 625
+tile13-renthotel = 750
 tile13-group = magenta
-tile13-mortgageValue=1400
+tile13-mortgageValue=70
 tile13-coordX = 0
 tile13-coordY = 7
 tile13-rgb = 0xFF00FF
 
-tile14-name = Lugana Via Nassa
-tile14-price = 3200
-tile14-houseCost = 1000
-tile14-hotelCost = 1000
-tile14-rent = 240
-tile14-rent1house = 1200
-tile14-rent2house = 3600
-tile14-rent3house = 10000
-tile14-rent4house = 14000
-tile14-renthotel = 18000
+tile14-name = Virginia Avenue
+tile14-price = 160
+tile14-houseCost = 100
+tile14-hotelCost = 100
+tile14-rent = 12
+tile14-rent1house = 60
+tile14-rent2house = 180
+tile14-rent3house = 500
+tile14-rent4house = 700
+tile14-renthotel = 900
 tile14-group = magenta
-tile14-mortgageValue=1600
+tile14-mortgageValue=80
 tile14-coordX = 0
 tile14-coordY = 6
 tile14-rgb = 0xFF00FF
 
-tile15-name = Funiculaires Réunis SA
-tile15-price = 4000
+tile15-name = Pennsylvania Railroad
+tile15-price = 200
 tile15-houseCost = NULL
 tile15-hotelCost = NULL
-tile15-rent = 500
+tile15-rent = 25
 tile15-rent1house = NULL 
 tile15-rent2house = NULL
 tile15-rent3house = NULL
 tile15-rent4house = NULL
 tile15-renthotel = NULL
 tile15-group = railroad
-tile15-mortgageValue= 2000
+tile15-mortgageValue= 100
 tile15-coordX = 0
 tile15-coordY = 5
 tile15-rgb = NULL
 
 
-tile16-name = Bienne Rue de Nidau
-tile16-price = 3600
-tile16-houseCost = 2000
-tile16-hotelCost = 2000
-tile16-rent = 280
-tile16-rent1house = 1400
-tile16-rent2house = 4000
-tile16-rent3house = 11000
-tile16-rent4house = 15000
-tile16-renthotel = 19000
+tile16-name = St. James Place
+tile16-price = 180
+tile16-houseCost = 100
+tile16-hotelCost = 100
+tile16-rent = 14
+tile16-rent1house = 70
+tile16-rent2house = 200
+tile16-rent3house = 550
+tile16-rent4house = 750
+tile16-renthotel = 950
 tile16-group = orange
-tile16-mortgageValue=1800
+tile16-mortgageValue=90
 tile16-coordX = 0
 tile16-coordY = 4
 tile16-rgb = 0xFFA500
 
 
-tile17-name = Chancellerie
+tile17-name = Community Chest
 tile17-price = NULL
 tile17-houseCost = NULL
 tile17-hotelCost = NULL
@@ -303,18 +303,18 @@ tile17-rgb = NULL
 
 
 
-tile18-name = Fribourg Av. de la Gare
-tile18-price = 3600
-tile18-houseCost = 2000
-tile18-hotelCost = 2000
-tile18-rent = 280
-tile18-rent1house = 1400
-tile18-rent2house = 4000
-tile18-rent3house = 11000
-tile18-rent4house = 15000
-tile18-renthotel = 19000
+tile18-name = Tennessee Avenue
+tile18-price = 180
+tile18-houseCost = 100
+tile18-hotelCost = 100
+tile18-rent = 14
+tile18-rent1house = 70
+tile18-rent2house = 200
+tile18-rent3house = 550
+tile18-rent4house = 750
+tile18-renthotel = 950
 tile18-group = orange
-tile18-mortgageValue=1800
+tile18-mortgageValue=90
 tile18-coordX = 0
 tile18-coordY = 2
 tile18-rgb = 0xFFA500
@@ -554,7 +554,7 @@ tile32-coordX = 10
 tile32-coordY = 2
 tile32-rgb = 0x008000
 
-tile33-name = Chancellerie
+tile33-name = Community Chest
 tile33-price = NULL
 tile33-houseCost = NULL
 tile33-hotelCost = NULL
