Tiles in french are finished

--- a/monopoly/src/tile_en.properties
+++ b/monopoly/src/tile_en.properties
@@ -320,24 +320,24 @@ tile18-coordY = 2
 tile18-rgb = 0xFFA500
 
 
-tile19-name = New York Avenue
-tile19-price = 200
-tile19-houseCost = 100
-tile19-hotelCost = 100
-tile19-rent = 16
-tile19-rent1house = 80
-tile19-rent2house = 220
-tile19-rent3house = 600
-tile19-rent4house = 800
-tile19-renthotel = 1000
+tile19-name = La Chaux-de-Fonds Av. Leopold-Robert
+tile19-price = 4000
+tile19-houseCost = 2000
+tile19-hotelCost = 2000
+tile19-rent = 320
+tile19-rent1house = 1600
+tile19-rent2house = 4400
+tile19-rent3house = 12000
+tile19-rent4house = 16000
+tile19-renthotel = 20000
 tile19-group = orange
-tile19-mortgageValue=100
+tile19-mortgageValue=2000
 tile19-coordX = 0
 tile19-coordY = 1
 tile19-rgb = 0xFFA500
 
 
-tile20-name = Free Parking
+tile20-name =Parc Gratuit
 tile20-price = NULL
 tile20-houseCost = NULL
 tile20-hotelCost = NULL
@@ -354,18 +354,18 @@ tile20-coordY = 0
 tile20-rgb = NULL
 
 
-tile21-name = Kentucky Avenue
-tile21-price = 220
-tile21-houseCost = 150
-tile21-hotelCost = 150
-tile21-rent = 18
-tile21-rent1house = 90
-tile21-rent2house = 250
-tile21-rent3house = 700
-tile21-rent4house = 8700
-tile21-renthotel = 875
+tile21-name = Winterthour Bahnhofplatz
+tile21-price = 4400
+tile21-houseCost = 3000
+tile21-hotelCost = 3000
+tile21-rent = 360
+tile21-rent1house = 1800
+tile21-rent2house = 5000
+tile21-rent3house = 14000
+tile21-rent4house = 17500
+tile21-renthotel = 21000
 tile21-group = red
-tile21-mortgageValue=110
+tile21-mortgageValue=2200
 tile21-coordX = 1
 tile21-coordY = 0
 tile21-rgb = 0xFF0000
@@ -386,92 +386,92 @@ tile22-coordX = 2
 tile22-coordY = 0
 tile22-rgb = NULL
 
-tile23-name = Indiana Avenue
-tile23-price = 220
-tile23-houseCost = 150
-tile23-hotelCost = 150
-tile23-rent = 18
-tile23-rent1house = 90
-tile23-rent2house = 250
-tile23-rent3house = 700
-tile23-rent4house = 875
-tile23-renthotel = 1050
+tile23-name = St-Gall Marktplatz
+tile23-price = 4400
+tile23-houseCost = 3000
+tile23-hotelCost = 3000
+tile23-rent = 360
+tile23-rent1house = 1800
+tile23-rent2house = 5000
+tile23-rent3house = 14000
+tile23-rent4house = 17500
+tile23-renthotel = 21000
 tile23-group = red
-tile23-mortgageValue=110
+tile23-mortgageValue=2200
 tile23-coordX = 3
 tile23-coordY = 0
 tile23-rgb = 0xFF0000
 
 
-tile24-name = Illinois Avenue
-tile24-price = 240
-tile24-houseCost =150
-tile24-hotelCost =150
-tile24-rent = 20
-tile24-rent1house = 100
-tile24-rent2house = 300
-tile24-rent3house = 750
-tile24-rent4house = 925
-tile24-renthotel = 1100
+tile24-name = Berne Place Fédérale
+tile24-price = 4800
+tile24-houseCost =3000
+tile24-hotelCost =3000
+tile24-rent = 400
+tile24-rent1house = 2000
+tile24-rent2house = 6000
+tile24-rent3house = 15000
+tile24-rent4house = 18500
+tile24-renthotel = 22000
 tile24-group = red
-tile24-mortgageValue=120
+tile24-mortgageValue=2400
 tile24-coordX = 4
 tile24-coordY = 0
 tile24-rgb = 0xFF0000
 
 
-tile25-name = B&O Railroad
-tile25-price = 200
+tile25-name = Tramways Interurbains
+tile25-price = 4000
 tile25-houseCost = NULL
 tile25-hotelCost = NULL
-tile25-rent = 25
+tile25-rent = 500
 tile25-rent1house = NULL 
 tile25-rent2house = NULL
 tile25-rent3house = NULL
 tile25-rent4house = NULL
 tile25-renthotel = NULL
 tile25-group = railroad
-tile25-mortgageValue= 100
+tile25-mortgageValue= 2000
 tile25-coordX = 5
 tile25-coordY = 0
 tile25-rgb = NULL
 
-tile26-name = Atlantic Avenue
-tile26-price = 260
-tile26-houseCost =150
-tile26-hotelCost =150
-tile26-rent = 22
-tile26-rent1house = 110
-tile26-rent2house = 330
-tile26-rent3house = 800
-tile26-rent4house = 975
-tile26-renthotel = 1150
+tile26-name = Lucerne Weggisgasse
+tile26-price = 5200
+tile26-houseCost =3000
+tile26-hotelCost =3000
+tile26-rent = 440
+tile26-rent1house = 2200
+tile26-rent2house = 6600
+tile26-rent3house = 16000
+tile26-rent4house = 19500
+tile26-renthotel = 23000
 tile26-group = yellow
-tile26-mortgageValue=130
+tile26-mortgageValue=2600
 tile26-coordX = 6
 tile26-coordY = 0
 tile26-rgb = 0xFFFF00
 
 
-tile27-name = Ventnor Avenue
-tile27-price =260
-tile27-houseCost =150
-tile27-hotelCost =150
-tile27-rent =22
-tile27-rent1house = 110
-tile27-rent2house = 330
-tile27-rent3house = 800
-tile27-rent4house = 975
-tile27-renthotel = 1150
+tile27-name = Zurich Rennweg
+tile27-price =5200
+tile27-houseCost =3000
+tile27-hotelCost =3000
+tile27-rent =4400
+tile27-rent1house = 2200
+tile27-rent2house = 6600
+tile27-rent3house = 1600
+tile27-rent4house = 19500
+tile27-renthotel = 23000
 tile27-group = yellow
-tile27-mortgageValue= 130
+tile27-mortgageValue= 2600
 tile27-coordX = 7
 tile27-coordY = 0
 tile27-rgb = 0xFFFF00
 
 
-tile28-name = Water Works
-tile28-price = 150
+tile28-name = Usines Hydrauliques
+tile28-price = 300
 tile28-houseCost = NULL
 tile28-hotelCost = NULL
 tile28-rent = NULL
@@ -481,30 +481,30 @@ tile28-rent3house = NULL
 tile28-rent4house = NULL
 tile28-renthotel = NULL
 tile28-group = utility
-tile28-mortgageValue= 75
+tile28-mortgageValue= 1500
 tile28-coordX = 8
 tile28-coordY = 0
 tile28-rgb = NULL
 
 
-tile29-name = Marvin Gardens
-tile29-price =  280
-tile29-houseCost = 150
-tile29-hotelCost = 150
-tile29-rent = 24
-tile29-rent1house = 120
-tile29-rent2house = 360
-tile29-rent3house = 850
-tile29-rent4house = 1025
-tile29-renthotel = 1200
+tile29-name = Lausanne Rue de Bourg
+tile29-price =  5600
+tile29-houseCost = 3000
+tile29-hotelCost = 3000
+tile29-rent = 480
+tile29-rent1house = 2400
+tile29-rent2house = 7200
+tile29-rent3house = 17000
+tile29-rent4house = 20500
+tile29-renthotel = 24000
 tile29-group = yellow
-tile29-mortgageValue= 140
+tile29-mortgageValue= 2800
 tile29-coordX = 9
 tile29-coordY = 0
 tile29-rgb = 0xFFFF00
 
 
-tile30-name = Go To Jail
+tile30-name = Va en prison!
 tile30-price = NULL
 tile30-houseCost = NULL
 tile30-hotelCost = NULL
@@ -521,35 +521,35 @@ tile30-coordY = 0
 tile30-rgb = NULL
 
 
-tile31-name = Pacific Avenue
-tile31-price = 300
-tile31-houseCost = 200 
-tile31-hotelCost = 200
-tile31-rent = 26
-tile31-rent1house = 130
-tile31-rent2house = 390
-tile31-rent3house = 900
-tile31-rent4house = 1100
-tile31-renthotel = 1275
+tile31-name = Bâle Freiestrasse
+tile31-price = 6000
+tile31-houseCost = 4000 
+tile31-hotelCost = 4000
+tile31-rent = 520
+tile31-rent1house = 2600
+tile31-rent2house = 7800
+tile31-rent3house = 18000
+tile31-rent4house = 22000
+tile31-renthotel = 25500
 tile31-group = green
-tile31-mortgageValue= 150
+tile31-mortgageValue= 3000
 tile31-coordX = 10
 tile31-coordY = 1
 tile31-rgb = 0x008000
 
 
-tile32-name = North Carolina Avenue
-tile32-price = 300
-tile32-houseCost = 200 
-tile32-hotelCost = 200
-tile32-rent = 26
-tile32-rent1house = 130
-tile32-rent2house = 390
-tile32-rent3house = 900
-tile32-rent4house = 1100
-tile32-renthotel = 1275
+tile32-name = Genève Rue de la Croix-d'Or
+tile32-price = 6000
+tile32-houseCost = 4000 
+tile32-hotelCost = 4000
+tile32-rent = 520
+tile32-rent1house = 2600
+tile32-rent2house = 7800
+tile32-rent3house = 18000
+tile32-rent4house = 22000
+tile32-renthotel = 25500
 tile32-group = green
-tile32-mortgageValue= 150
+tile32-mortgageValue= 3000
 tile32-coordX = 10
 tile32-coordY = 2
 tile32-rgb = 0x008000
@@ -570,34 +570,34 @@ tile33-coordX = 10
 tile33-coordY = 3
 tile33-rgb = NULL
 
-tile34-name = Pennsylvania Avenue
-tile34-price = 320
-tile34-houseCost = 200 
-tile34-hotelCost = 200
-tile34-rent = 28
-tile34-rent1house = 150
-tile34-rent2house = 450
-tile34-rent3house = 1000
-tile34-rent4house = 1200
-tile34-renthotel = 1400
+tile34-name = Berne Spitalgasse
+tile34-price = 6400
+tile34-houseCost = 4000 
+tile34-hotelCost = 4000
+tile34-rent = 560
+tile34-rent1house = 3000
+tile34-rent2house = 9000
+tile34-rent3house = 20000
+tile34-rent4house = 24000
+tile34-renthotel = 28000
 tile34-group = green
-tile34-mortgageValue= 160
+tile34-mortgageValue= 3200
 tile34-coordX = 10
 tile34-coordY = 4
 tile34-rgb = 0x008000
 
-tile35-name = Short Line
-tile35-price = 200
+tile35-name = Association des Téléphériques
+tile35-price = 4000
 tile35-houseCost = NULL
 tile35-hotelCost = NULL
-tile35-rent = 25
+tile35-rent = 500
 tile35-rent1house = NULL 
 tile35-rent2house = NULL
 tile35-rent3house = NULL
 tile35-rent4house = NULL
 tile35-renthotel = NULL
 tile35-group = railroad
-tile35-mortgageValue= 100
+tile35-mortgageValue= 2000
 tile35-coordX = 10
 tile35-coordY = 5
 tile35-rgb = NULL
@@ -619,28 +619,28 @@ tile36-coordX = 10
 tile36-coordY = 6
 tile36-rgb = NULL
 
-tile37-name = Park Place
-tile37-price = 350
-tile37-houseCost = 200  
-tile37-hotelCost = 200
-tile37-rent = 35
-tile37-rent1house =  175
-tile37-rent2house =  500
-tile37-rent3house =  1100
-tile37-rent4house = 1300
-tile37-renthotel =  1500
+tile37-name = Lausanne Place St-François
+tile37-price = 7000
+tile37-houseCost = 4000  
+tile37-hotelCost = 4000
+tile37-rent = 700
+tile37-rent1house =  3500
+tile37-rent2house =  10000
+tile37-rent3house =  22000
+tile37-rent4house = 26000
+tile37-renthotel =  30000
 tile37-group = blue
-tile37-mortgageValue= 175
+tile37-mortgageValue= 3500
 tile37-coordX = 10
 tile37-coordY = 7
 tile37-rgb = 0x0000FF
 
 
-tile38-name = Luxury Tax
+tile38-name = Impôt Supplémentaire
 tile38-price = NULL
 tile38-houseCost = NULL
 tile38-hotelCost = NULL
-tile38-rent = NULL
+tile38-rent = 2000
 tile38-rent1house = NULL 
 tile38-rent2house = NULL
 tile38-rent3house = NULL
@@ -652,18 +652,18 @@ tile38-coordX = 10
 tile38-coordY = 8
 tile38-rgb = NULL
 
-tile39-name = Boardwalk
-tile39-price = 400
-tile39-houseCost = 200
-tile39-hotelCost = 200
-tile39-rent = 50
-tile39-rent1house =  200
-tile39-rent2house = 600
-tile39-rent3house = 1400
-tile39-rent4house = 1700
-tile39-renthotel = 2000
+tile39-name = Zurich Paradeplatz
+tile39-price = 8000
+tile39-houseCost = 4000
+tile39-hotelCost = 4000
+tile39-rent = 1000
+tile39-rent1house = 4000
+tile39-rent2house = 12000
+tile39-rent3house = 28000
+tile39-rent4house = 34000
+tile39-renthotel = 40000
 tile39-group = blue
-tile39-mortgageValue= 200
+tile39-mortgageValue= 4000
 tile39-coordX = 10
 tile39-coordY = 9
 tile39-rgb = 0x0000FF
