--- a/monopoly/src/tile_en.properties
+++ b/monopoly/src/tile_en.properties
@@ -2,9 +2,9 @@
 #File Name : tile_en.properties
 #
 
-startMoney =30000
+startMoney =15000
 
-tile0-name = Start
+tile0-name = Go
 tile0-price = NULL
 tile0-houseCost = NULL
 tile0-hotelCost = NULL
@@ -20,24 +20,24 @@ tile0-coordX = 10
 tile0-coordY = 10
 tile0-rgb = NULL
 
-tile1-name = Coire Kornplatz
-tile1-price = 1200
-tile1-houseCost = 1000
-tile1-hotelCost = 1000
-tile1-rent = 40
-tile1-rent1house = 200 
-tile1-rent2house = 600
-tile1-rent3house = 1800
-tile1-rent4house = 3200
-tile1-renthotel = 5000
+tile1-name = Mediterranean Avenue
+tile1-price = 60
+tile1-houseCost = 50
+tile1-hotelCost = 50
+tile1-rent = 2
+tile1-rent1house = 10 
+tile1-rent2house = 30
+tile1-rent3house = 90
+tile1-rent4house = 160
+tile1-renthotel = 250
 tile1-group = purple
-tile1-mortgageValue=600
+tile1-mortgageValue=30
 tile1-coordX = 9
 tile1-coordY = 10
 tile1-rgb = 0xDCD0FF
 
 #TERRAIN
-tile2-name = Chancellerie
+tile2-name = Community Chest
 tile2-price = NULL
 tile2-houseCost = NULL
 tile2-hotelCost = NULL
@@ -53,24 +53,24 @@ tile2-coordX = 8
 tile2-coordY = 10
 tile2-rgb = NULL
 
-tile3-name = Schaffhouse Vordergasse
-tile3-price = 1200
-tile3-houseCost = 1000
-tile3-hotelCost = 1000
-tile3-rent = 80
-tile3-rent1house = 400 
-tile3-rent2house = 1200
-tile3-rent3house = 3600
-tile3-rent4house = 6400
-tile3-renthotel = 9000
+tile3-name = Baltic Avenue
+tile3-price = 60
+tile3-houseCost = 50
+tile3-hotelCost = 50
+tile3-rent = 4
+tile3-rent1house = 20 
+tile3-rent2house = 60
+tile3-rent3house = 180
+tile3-rent4house = 320
+tile3-renthotel = 480
 tile3-group = purple
-tile3-mortgageValue=600
+tile3-mortgageValue=30
 tile3-coordX = 7
 tile3-coordY = 10
 tile3-rgb = 0xDCD0FF
 
 #TERRAIN
-tile4-name = Impôt sur le revenu
+tile4-name = Income Tax
 tile4-price = NULL
 tile4-houseCost = NULL
 tile4-hotelCost = NULL
@@ -86,36 +86,36 @@ tile4-coordX = 6
 tile4-coordY = 10
 tile4-rgb = NULL
 
-tile5-name = Union des chemins de fer privés
-tile5-price = 4000
+tile5-name = Reading Railroad
+tile5-price = 200
 tile5-houseCost = NULL
 tile5-hotelCost = NULL
-tile5-rent = 500
+tile5-rent = 25
 tile5-rent1house = NULL 
 tile5-rent2house = NULL
 tile5-rent3house = NULL
 tile5-rent4house = NULL
 tile5-renthotel = NULL
 tile5-group = railroad
-tile5-mortgageValue= 2000
+tile5-mortgageValue= 100
 tile5-coordX = 5
 tile5-coordY = 10
 tile5-rgb = NULL
 
 
 
-tile6-name = Aarau Rathausplatz
-tile6-price = 2000
-tile6-houseCost = 1000
-tile6-hotelCost = 1000
-tile6-rent = 120
-tile6-rent1house = 600 
-tile6-rent2house = 1800
-tile6-rent3house = 5400
-tile6-rent4house = 8000
-tile6-renthotel = 1100
+tile6-name = Oriental Avenue
+tile6-price = 100
+tile6-houseCost = 50
+tile6-hotelCost = 50
+tile6-rent = 6
+tile6-rent1house = 30 
+tile6-rent2house = 90
+tile6-rent3house = 270
+tile6-rent4house = 400
+tile6-renthotel = 550
 tile6-group = cyan
-tile6-mortgageValue=1000
+tile6-mortgageValue=50
 tile6-coordX = 4
 tile6-coordY = 10
 tile6-rgb = 0x00FFFF
@@ -137,41 +137,41 @@ tile7-coordY = 10
 tile7-rgb = NULL
 
 
-tile8-name = Neuenburg Place Pury
-tile8-price = 2000
-tile8-houseCost = 1000
-tile8-hotelCost = 1000
-tile8-rent = 120
-tile8-rent1house = 600
-tile8-rent2house = 1800
-tile8-rent3house = 5400
-tile8-rent4house = 8000
-tile8-renthotel = 11000
+tile8-name = Vermont Avenue
+tile8-price = 100
+tile8-houseCost = 50
+tile8-hotelCost = 50
+tile8-rent = 6
+tile8-rent1house = 30
+tile8-rent2house = 90
+tile8-rent3house = 270
+tile8-rent4house = 400
+tile8-renthotel = 550
 tile8-group = cyan
-tile8-mortgageValue=1000
+tile8-mortgageValue=50
 tile8-coordX = 2
 tile8-coordY = 10
 tile8-rgb = 0x00FFFF
 
 
-tile9-name = Thoune Hauptgasse
-tile9-price = 2400
-tile9-houseCost = 1000
-tile9-hotelCost = 1000
-tile9-rent = 160
-tile9-rent1house = 800
-tile9-rent2house = 2000
-tile9-rent3house = 6000
-tile9-rent4house = 9000
-tile9-renthotel = 12000
+tile9-name = Oriental Avenue
+tile9-price = 120
+tile9-houseCost = 50
+tile9-hotelCost = 50
+tile9-rent = 8
+tile9-rent1house = 40
+tile9-rent2house = 100
+tile9-rent3house = 300
+tile9-rent4house = 450
+tile9-renthotel = 600
 tile9-group = cyan
-tile9-mortgageValue=1200
+tile9-mortgageValue=60
 tile9-coordX = 1
 tile9-coordY = 10
 tile9-rgb = 0x00FFFF
 
 
-tile10-name = Prison
+tile10-name = Jail
 tile10-price = NULL
 tile10-houseCost = NULL
 tile10-hotelCost = NULL
@@ -187,24 +187,24 @@ tile10-coordX = 0
 tile10-coordY = 10
 tile10-rgb = NULL
 
-tile11-name = Bâle Steinenvorstadt
-tile11-price = 2800
-tile11-houseCost = 1000
-tile11-hotelCost = 1000
-tile11-rent = 200
-tile11-rent1house = 1000
-tile11-rent2house = 3000
-tile11-rent3house = 9000
-tile11-rent4house = 12500
-tile11-renthotel = 15000
+tile11-name = St. Charles Place
+tile11-price = 140
+tile11-houseCost = 100
+tile11-hotelCost = 100
+tile11-rent = 10
+tile11-rent1house = 50
+tile11-rent2house = 150
+tile11-rent3house = 450
+tile11-rent4house = 625
+tile11-renthotel = 750
 tile11-group = magenta
-tile11-mortgageValue=1400
+tile11-mortgageValue=70
 tile11-coordX = 0
 tile11-coordY = 9
 tile11-rgb = 0xFF00FF
 
-tile12-name = Usines Électriques
-tile12-price = 3000
+tile12-name = Electric Company
+tile12-price = 150
 tile12-houseCost = NULL
 tile12-hotelCost = NULL
 tile12-rent = NULL
@@ -214,78 +214,78 @@ tile12-rent3house = NULL
 tile12-rent4house = NULL
 tile12-renthotel = NULL
 tile12-group = utility
-tile12-mortgageValue= 1500
+tile12-mortgageValue= 75
 tile12-coordX = 0
 tile12-coordY = 8
 tile12-rgb = NULL
 
-tile13-name = Soleure Hauptgasse
-tile13-price = 2800
-tile13-houseCost = 1000
-tile13-hotelCost = 1000
-tile13-rent = 200
-tile13-rent1house = 1000
-tile13-rent2house = 3000
-tile13-rent3house = 6000
-tile13-rent4house = 9000
-tile13-renthotel = 12500
+tile13-name = States Avenue
+tile13-price = 140
+tile13-houseCost = 100
+tile13-hotelCost = 100
+tile13-rent = 10
+tile13-rent1house = 50
+tile13-rent2house = 150
+tile13-rent3house = 450
+tile13-rent4house = 625
+tile13-renthotel = 750
 tile13-group = magenta
-tile13-mortgageValue=1400
+tile13-mortgageValue=70
 tile13-coordX = 0
 tile13-coordY = 7
 tile13-rgb = 0xFF00FF
 
-tile14-name = Lugana Via Nassa
-tile14-price = 3200
-tile14-houseCost = 1000
-tile14-hotelCost = 1000
-tile14-rent = 240
-tile14-rent1house = 1200
-tile14-rent2house = 3600
-tile14-rent3house = 10000
-tile14-rent4house = 14000
-tile14-renthotel = 18000
+tile14-name = Virginia Avenue
+tile14-price = 160
+tile14-houseCost = 100
+tile14-hotelCost = 100
+tile14-rent = 12
+tile14-rent1house = 60
+tile14-rent2house = 180
+tile14-rent3house = 500
+tile14-rent4house = 700
+tile14-renthotel = 900
 tile14-group = magenta
-tile14-mortgageValue=1600
+tile14-mortgageValue=80
 tile14-coordX = 0
 tile14-coordY = 6
 tile14-rgb = 0xFF00FF
 
-tile15-name = Funiculaires Réunis SA
-tile15-price = 4000
+tile15-name = Pennsylvania Railroad
+tile15-price = 200
 tile15-houseCost = NULL
 tile15-hotelCost = NULL
-tile15-rent = 500
+tile15-rent = 25
 tile15-rent1house = NULL 
 tile15-rent2house = NULL
 tile15-rent3house = NULL
 tile15-rent4house = NULL
 tile15-renthotel = NULL
 tile15-group = railroad
-tile15-mortgageValue= 2000
+tile15-mortgageValue= 100
 tile15-coordX = 0
 tile15-coordY = 5
 tile15-rgb = NULL
 
 
-tile16-name = Bienne Rue de Nidau
-tile16-price = 3600
-tile16-houseCost = 2000
-tile16-hotelCost = 2000
-tile16-rent = 280
-tile16-rent1house = 1400
-tile16-rent2house = 4000
-tile16-rent3house = 11000
-tile16-rent4house = 15000
-tile16-renthotel = 19000
+tile16-name = St. James Place
+tile16-price = 180
+tile16-houseCost = 100
+tile16-hotelCost = 100
+tile16-rent = 14
+tile16-rent1house = 70
+tile16-rent2house = 200
+tile16-rent3house = 550
+tile16-rent4house = 750
+tile16-renthotel = 950
 tile16-group = orange
-tile16-mortgageValue=1800
+tile16-mortgageValue=90
 tile16-coordX = 0
 tile16-coordY = 4
 tile16-rgb = 0xFFA500
 
 
-tile17-name = Chancellerie
+tile17-name = Community Chest
 tile17-price = NULL
 tile17-houseCost = NULL
 tile17-hotelCost = NULL
@@ -303,41 +303,41 @@ tile17-rgb = NULL
 
 
 
-tile18-name = Fribourg Av. de la Gare
-tile18-price = 3600
-tile18-houseCost = 2000
-tile18-hotelCost = 2000
-tile18-rent = 280
-tile18-rent1house = 1400
-tile18-rent2house = 4000
-tile18-rent3house = 11000
-tile18-rent4house = 15000
-tile18-renthotel = 19000
+tile18-name = Tennessee Avenue
+tile18-price = 180
+tile18-houseCost = 100
+tile18-hotelCost = 100
+tile18-rent = 14
+tile18-rent1house = 70
+tile18-rent2house = 200
+tile18-rent3house = 550
+tile18-rent4house = 750
+tile18-renthotel = 950
 tile18-group = orange
-tile18-mortgageValue=1800
+tile18-mortgageValue=90
 tile18-coordX = 0
 tile18-coordY = 2
 tile18-rgb = 0xFFA500
 
 
-tile19-name = La Chaux-de-Fonds Av. Leopold-Robert
-tile19-price = 4000
-tile19-houseCost = 2000
-tile19-hotelCost = 2000
-tile19-rent = 320
-tile19-rent1house = 1600
-tile19-rent2house = 4400
-tile19-rent3house = 12000
-tile19-rent4house = 16000
-tile19-renthotel = 20000
+tile19-name = New York Avenue
+tile19-price = 200
+tile19-houseCost = 100
+tile19-hotelCost = 100
+tile19-rent = 16
+tile19-rent1house = 80
+tile19-rent2house = 220
+tile19-rent3house = 600
+tile19-rent4house = 800
+tile19-renthotel = 1000
 tile19-group = orange
-tile19-mortgageValue=2000
+tile19-mortgageValue=100
 tile19-coordX = 0
 tile19-coordY = 1
 tile19-rgb = 0xFFA500
 
 
-tile20-name =Parc Gratuit
+tile20-name = Free Parking
 tile20-price = NULL
 tile20-houseCost = NULL
 tile20-hotelCost = NULL
@@ -354,18 +354,18 @@ tile20-coordY = 0
 tile20-rgb = NULL
 
 
-tile21-name = Winterthour Bahnhofplatz
-tile21-price = 4400
-tile21-houseCost = 3000
-tile21-hotelCost = 3000
-tile21-rent = 360
-tile21-rent1house = 1800
-tile21-rent2house = 5000
-tile21-rent3house = 14000
-tile21-rent4house = 17500
-tile21-renthotel = 21000
+tile21-name = Kentucky Avenue
+tile21-price = 220
+tile21-houseCost = 150
+tile21-hotelCost = 150
+tile21-rent = 18
+tile21-rent1house = 90
+tile21-rent2house = 250
+tile21-rent3house = 700
+tile21-rent4house = 8700
+tile21-renthotel = 875
 tile21-group = red
-tile21-mortgageValue=2200
+tile21-mortgageValue=110
 tile21-coordX = 1
 tile21-coordY = 0
 tile21-rgb = 0xFF0000
@@ -386,92 +386,92 @@ tile22-coordX = 2
 tile22-coordY = 0
 tile22-rgb = NULL
 
-tile23-name = St-Gall Marktplatz
-tile23-price = 4400
-tile23-houseCost = 3000
-tile23-hotelCost = 3000
-tile23-rent = 360
-tile23-rent1house = 1800
-tile23-rent2house = 5000
-tile23-rent3house = 14000
-tile23-rent4house = 17500
-tile23-renthotel = 21000
+tile23-name = Indiana Avenue
+tile23-price = 220
+tile23-houseCost = 150
+tile23-hotelCost = 150
+tile23-rent = 18
+tile23-rent1house = 90
+tile23-rent2house = 250
+tile23-rent3house = 700
+tile23-rent4house = 875
+tile23-renthotel = 1050
 tile23-group = red
-tile23-mortgageValue=2200
+tile23-mortgageValue=110
 tile23-coordX = 3
 tile23-coordY = 0
 tile23-rgb = 0xFF0000
 
 
-tile24-name = Berne Place Fédérale
-tile24-price = 4800
-tile24-houseCost =3000
-tile24-hotelCost =3000
-tile24-rent = 400
-tile24-rent1house = 2000
-tile24-rent2house = 6000
-tile24-rent3house = 15000
-tile24-rent4house = 18500
-tile24-renthotel = 22000
+tile24-name = Illinois Avenue
+tile24-price = 240
+tile24-houseCost =150
+tile24-hotelCost =150
+tile24-rent = 20
+tile24-rent1house = 100
+tile24-rent2house = 300
+tile24-rent3house = 750
+tile24-rent4house = 925
+tile24-renthotel = 1100
 tile24-group = red
-tile24-mortgageValue=2400
+tile24-mortgageValue=120
 tile24-coordX = 4
 tile24-coordY = 0
 tile24-rgb = 0xFF0000
 
 
-tile25-name = Tramways Interurbains
-tile25-price = 4000
+tile25-name = B&O Railroad
+tile25-price = 200
 tile25-houseCost = NULL
 tile25-hotelCost = NULL
-tile25-rent = 500
+tile25-rent = 25
 tile25-rent1house = NULL 
 tile25-rent2house = NULL
 tile25-rent3house = NULL
 tile25-rent4house = NULL
 tile25-renthotel = NULL
 tile25-group = railroad
-tile25-mortgageValue= 2000
+tile25-mortgageValue= 100
 tile25-coordX = 5
 tile25-coordY = 0
 tile25-rgb = NULL
 
-tile26-name = Lucerne Weggisgasse
-tile26-price = 5200
-tile26-houseCost =3000
-tile26-hotelCost =3000
-tile26-rent = 440
-tile26-rent1house = 2200
-tile26-rent2house = 6600
-tile26-rent3house = 16000
-tile26-rent4house = 19500
-tile26-renthotel = 23000
+tile26-name = Atlantic Avenue
+tile26-price = 260
+tile26-houseCost =150
+tile26-hotelCost =150
+tile26-rent = 22
+tile26-rent1house = 110
+tile26-rent2house = 330
+tile26-rent3house = 800
+tile26-rent4house = 975
+tile26-renthotel = 1150
 tile26-group = yellow
-tile26-mortgageValue=2600
+tile26-mortgageValue=130
 tile26-coordX = 6
 tile26-coordY = 0
 tile26-rgb = 0xFFFF00
 
 
-tile27-name = Zurich Rennweg
-tile27-price =5200
-tile27-houseCost =3000
-tile27-hotelCost =3000
-tile27-rent =4400
-tile27-rent1house = 2200
-tile27-rent2house = 6600
-tile27-rent3house = 1600
-tile27-rent4house = 19500
-tile27-renthotel = 23000
+tile27-name = Ventnor Avenue
+tile27-price =260
+tile27-houseCost =150
+tile27-hotelCost =150
+tile27-rent =22
+tile27-rent1house = 110
+tile27-rent2house = 330
+tile27-rent3house = 800
+tile27-rent4house = 975
+tile27-renthotel = 1150
 tile27-group = yellow
-tile27-mortgageValue= 2600
+tile27-mortgageValue= 130
 tile27-coordX = 7
 tile27-coordY = 0
 tile27-rgb = 0xFFFF00
 
 
-tile28-name = Usines Hydrauliques
-tile28-price = 300
+tile28-name = Water Works
+tile28-price = 150
 tile28-houseCost = NULL
 tile28-hotelCost = NULL
 tile28-rent = NULL
@@ -481,30 +481,30 @@ tile28-rent3house = NULL
 tile28-rent4house = NULL
 tile28-renthotel = NULL
 tile28-group = utility
-tile28-mortgageValue= 1500
+tile28-mortgageValue= 75
 tile28-coordX = 8
 tile28-coordY = 0
 tile28-rgb = NULL
 
 
-tile29-name = Lausanne Rue de Bourg
-tile29-price =  5600
-tile29-houseCost = 3000
-tile29-hotelCost = 3000
-tile29-rent = 480
-tile29-rent1house = 2400
-tile29-rent2house = 7200
-tile29-rent3house = 17000
-tile29-rent4house = 20500
-tile29-renthotel = 24000
+tile29-name = Marvin Gardens
+tile29-price =  280
+tile29-houseCost = 150
+tile29-hotelCost = 150
+tile29-rent = 24
+tile29-rent1house = 120
+tile29-rent2house = 360
+tile29-rent3house = 850
+tile29-rent4house = 1025
+tile29-renthotel = 1200
 tile29-group = yellow
-tile29-mortgageValue= 2800
+tile29-mortgageValue= 140
 tile29-coordX = 9
 tile29-coordY = 0
 tile29-rgb = 0xFFFF00
 
 
-tile30-name = Va en prison!
+tile30-name = Go To Jail
 tile30-price = NULL
 tile30-houseCost = NULL
 tile30-hotelCost = NULL
@@ -521,40 +521,40 @@ tile30-coordY = 0
 tile30-rgb = NULL
 
 
-tile31-name = Bâle Freiestrasse
-tile31-price = 6000
-tile31-houseCost = 4000 
-tile31-hotelCost = 4000
-tile31-rent = 520
-tile31-rent1house = 2600
-tile31-rent2house = 7800
-tile31-rent3house = 18000
-tile31-rent4house = 22000
-tile31-renthotel = 25500
+tile31-name = Pacific Avenue
+tile31-price = 300
+tile31-houseCost = 200 
+tile31-hotelCost = 200
+tile31-rent = 26
+tile31-rent1house = 130
+tile31-rent2house = 390
+tile31-rent3house = 900
+tile31-rent4house = 1100
+tile31-renthotel = 1275
 tile31-group = green
-tile31-mortgageValue= 3000
+tile31-mortgageValue= 150
 tile31-coordX = 10
 tile31-coordY = 1
 tile31-rgb = 0x008000
 
 
-tile32-name = Genève Rue de la Croix-d'Or
-tile32-price = 6000
-tile32-houseCost = 4000 
-tile32-hotelCost = 4000
-tile32-rent = 520
-tile32-rent1house = 2600
-tile32-rent2house = 7800
-tile32-rent3house = 18000
-tile32-rent4house = 22000
-tile32-renthotel = 25500
+tile32-name = North Carolina Avenue
+tile32-price = 300
+tile32-houseCost = 200 
+tile32-hotelCost = 200
+tile32-rent = 26
+tile32-rent1house = 130
+tile32-rent2house = 390
+tile32-rent3house = 900
+tile32-rent4house = 1100
+tile32-renthotel = 1275
 tile32-group = green
-tile32-mortgageValue= 3000
+tile32-mortgageValue= 150
 tile32-coordX = 10
 tile32-coordY = 2
 tile32-rgb = 0x008000
 
-tile33-name = Chancellerie
+tile33-name = Community Chest
 tile33-price = NULL
 tile33-houseCost = NULL
 tile33-hotelCost = NULL
@@ -570,34 +570,34 @@ tile33-coordX = 10
 tile33-coordY = 3
 tile33-rgb = NULL
 
-tile34-name = Berne Spitalgasse
-tile34-price = 6400
-tile34-houseCost = 4000 
-tile34-hotelCost = 4000
-tile34-rent = 560
-tile34-rent1house = 3000
-tile34-rent2house = 9000
-tile34-rent3house = 20000
-tile34-rent4house = 24000
-tile34-renthotel = 28000
+tile34-name = Pennsylvania Avenue
+tile34-price = 320
+tile34-houseCost = 200 
+tile34-hotelCost = 200
+tile34-rent = 28
+tile34-rent1house = 150
+tile34-rent2house = 450
+tile34-rent3house = 1000
+tile34-rent4house = 1200
+tile34-renthotel = 1400
 tile34-group = green
-tile34-mortgageValue= 3200
+tile34-mortgageValue= 160
 tile34-coordX = 10
 tile34-coordY = 4
 tile34-rgb = 0x008000
 
-tile35-name = Association des Téléphériques
-tile35-price = 4000
+tile35-name = Short Line
+tile35-price = 200
 tile35-houseCost = NULL
 tile35-hotelCost = NULL
-tile35-rent = 500
+tile35-rent = 25
 tile35-rent1house = NULL 
 tile35-rent2house = NULL
 tile35-rent3house = NULL
 tile35-rent4house = NULL
 tile35-renthotel = NULL
 tile35-group = railroad
-tile35-mortgageValue= 2000
+tile35-mortgageValue= 100
 tile35-coordX = 10
 tile35-coordY = 5
 tile35-rgb = NULL
@@ -619,28 +619,28 @@ tile36-coordX = 10
 tile36-coordY = 6
 tile36-rgb = NULL
 
-tile37-name = Lausanne Place St-François
-tile37-price = 7000
-tile37-houseCost = 4000  
-tile37-hotelCost = 4000
-tile37-rent = 700
-tile37-rent1house =  3500
-tile37-rent2house =  10000
-tile37-rent3house =  22000
-tile37-rent4house = 26000
-tile37-renthotel =  30000
+tile37-name = Park Place
+tile37-price = 350
+tile37-houseCost = 200  
+tile37-hotelCost = 200
+tile37-rent = 35
+tile37-rent1house =  175
+tile37-rent2house =  500
+tile37-rent3house =  1100
+tile37-rent4house = 1300
+tile37-renthotel =  1500
 tile37-group = blue
-tile37-mortgageValue= 3500
+tile37-mortgageValue= 175
 tile37-coordX = 10
 tile37-coordY = 7
 tile37-rgb = 0x0000FF
 
 
-tile38-name = Impôt Supplémentaire
+tile38-name = Luxury Tax
 tile38-price = NULL
 tile38-houseCost = NULL
 tile38-hotelCost = NULL
-tile38-rent = 2000
+tile38-rent = NULL
 tile38-rent1house = NULL 
 tile38-rent2house = NULL
 tile38-rent3house = NULL
@@ -652,18 +652,18 @@ tile38-coordX = 10
 tile38-coordY = 8
 tile38-rgb = NULL
 
-tile39-name = Zurich Paradeplatz
-tile39-price = 8000
-tile39-houseCost = 4000
-tile39-hotelCost = 4000
-tile39-rent = 1000
-tile39-rent1house = 4000
-tile39-rent2house = 12000
-tile39-rent3house = 28000
-tile39-rent4house = 34000
-tile39-renthotel = 40000
+tile39-name = Boardwalk
+tile39-price = 400
+tile39-houseCost = 200
+tile39-hotelCost = 200
+tile39-rent = 50
+tile39-rent1house =  200
+tile39-rent2house = 600
+tile39-rent3house = 1400
+tile39-rent4house = 1700
+tile39-renthotel = 2000
 tile39-group = blue
-tile39-mortgageValue= 4000
+tile39-mortgageValue= 200
 tile39-coordX = 10
 tile39-coordY = 9
 tile39-rgb = 0x0000FF
