Corrected a problem in the boardtile

--- a/monopoly/src/ch/bfh/monopoly/resources/gui_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/gui_en.properties
@@ -1,42 +1,42 @@
-title = "Monopoly"
-button-throwdice = "Throw dice"
-button-endturn = "End turn"
-button-chance = "Chance"
-button-communitychest = "Community"
-button-jailcard = "Jail card"
-button-trade = "Trade"
-button-buy = "Buy"
-button-auction = "Auction"
-button-bid = "Bid"
-button-sendoffer = "Send"
-tab-event = "Events"
-tab-card = "Card"
-tab-chat = "Chat"
-tab-history = "History"
-tab-trade = "Trade"
-label-youroffer = "Your offer is"
-label-requestfrompl = "What do you want from player"
-label-jailcard = "Jail card"
-label-buyhouse = "Buy house"
-label-buyhouserow = "Buy house row"
-label-buyhotel = "Buy hotel"
-label-buyhotelrow = "Buy hotel row"
-label-sellhouse = "Sell house"
-label-sellhouserow = "Sell house row"
-label-sellhotel = "Sell hotel"
-label-sellhotelrow = "Sell hotel row"
-label-mortgage = "Mortgage"
-label-unmortgage = "Unmortgage"
-label-price = "Price: "
-label-rent = "Rent: "
-label-onehouse = "With 1 house: "
-label-twohouses = "With 2 houses: "
-label-threehouses = "With 3 houses: "
-label-fourhouses = "With 4 houses: "
-label-hotel = "With hotel: "
-label-mortgagevalue = "Mortgage value: "
-text-throwindice = "I'm throwing the dice..."
-text-diceresult = "The result of the throw is.."
+title = Monopoly
+button-throwdice = Throw dice
+button-endturn = End turn
+button-chance = Chance
+button-communitychest = Community
+button-jailcard = Jail card
+button-trade = Trade
+button-buy = Buy
+button-auction = Auction
+button-bid = Bid
+button-sendoffer = Send
+tab-event = Events
+tab-card = Card
+tab-chat = Chat
+tab-history = History
+tab-trade = Trade
+label-youroffer = Your offer is
+label-requestfrompl = What do you want from player
+label-jailcard = Jail card
+label-buyhouse = Buy house
+label-buyhouserow = Buy house row
+label-buyhotel = Buy hotel
+label-buyhotelrow = Buy hotel row
+label-sellhouse = Sell house
+label-sellhouserow = Sell house row
+label-sellhotel = Sell hotel
+label-sellhotelrow = Sell hotel row
+label-mortgage = Mortgage
+label-unmortgage = Unmortgage
+label-price = Price: 
+label-rent = Rent: 
+label-onehouse = With 1 house: 
+label-twohouses = With 2 houses: 
+label-threehouses = With 3 houses: 
+label-fourhouses = With 4 houses: 
+label-hotel = With hotel: 
+label-mortgagevalue = Mortgage value: 
+text-throwindice = I'm throwing the dice...
+text-diceresult = The result of the throw is 
 
 
 
