Added the french property file

--- a/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
@@ -1,1 +1,39 @@
-
+title = Monopoly
+button-throwdice = Jeter les des
+button-endturn = Terminer le tour
+button-chance = Chance
+button-communitychest = Communité
+button-jailcard = Carte prison
+button-trade = Commerce
+button-buy = Achter
+button-auction = Enchère
+button-bid = Offrir
+button-sendoffer = Envoier
+tab-event = Événements
+tab-card = Carte
+tab-chat = Chat
+tab-history = Historique
+tab-trade = Commerce
+label-youroffer = Tu offres
+label-requestfrompl = Tu veut recevoir
+label-jailcard = Carte prison
+label-buyhouse = Acheter une maison
+label-buyhouserow = Acheter une ligne des maisons
+label-buyhotel = Acheter un hotel
+label-buyhotelrow = Acheter une ligne des hotels
+label-sellhouse = Vendre une maison
+label-sellhouserow = Vendre une ligne des maisons
+label-sellhotel = Vendre un hotel
+label-sellhotelrow = Vendre une ligne des hotel
+label-mortgage = Hypothèque
+label-unmortgage = Découverire
+label-price = Prix: 
+label-rent = Louer: 
+label-onehouse = Avec 1 maison: 
+label-twohouses = Avec 2 maisons: 
+label-threehouses = Avec 3 maisons: 
+label-fourhouses = Avec 4 maisons: 
+label-hotel = Avec hotel: 
+label-mortgagevalue = Valeure hypothècaire: 
+text-throwindice = Je jette les des...
+text-diceresult = La valeur de ton jet est 
