--- a/monopoly/src/ch/bfh/monopoly/resources/events_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/events_en.properties
@@ -33,7 +33,7 @@ luxuryTax-amount=-100
 # C H A N C E   C A R D S 
 # C H A N C E   C A R D S 
 # C H A N C E   C A R D S
- 
+chance-name="Chance"
 #MOVEMENT CARDS
 chance0-name =Back you go!
 chance0-cardText = Go back 3 spaces  
@@ -109,7 +109,7 @@ chance15-fixedSum=300
 # C O M M U N I T Y   C H E S T   C A R D S
 # C O M M U N I T Y   C H E S T   C A R D S
 # C O M M U N I T Y   C H E S T   C A R D S
-
+commChest-name="Community Chest"
 #MOVEMENT CARDS
 commchest0-name = Advance to Go
 commchest0-cardText = Advance to Go (Collect $200) 
