--- a/monopoly/src/ch/bfh/monopoly/resources/events_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/events_fr.properties
@@ -33,7 +33,7 @@ luxuryTax-amount=-100
 # C H A N C E   C A R D S 
 # C H A N C E   C A R D S 
 # C H A N C E   C A R D S
- 
+chance-name="Chance"
 #MOVEMENT CARDS
 chance0-name =Reculez!
 chance0-cardText = Recule de 3 casses.  
@@ -109,7 +109,7 @@ chance15-fixedSum=1000
 # C O M M U N I T Y   C H E S T   C A R D S
 # C O M M U N I T Y   C H E S T   C A R D S
 # C O M M U N I T Y   C H E S T   C A R D S
-
+commChest-name="Chancellerie"
 #MOVEMENT CARDS
 commchest0-name =«Start»
 commchest0-cardText =En route pour le  
