GUI can call getTileEventPanel() and all the EVent information is in the panel.

--- a/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
@@ -1,6 +1,12 @@
 #
 #File Name : tile_en.properties
 #
+#MESSAGES 
+isOwned=appartient déjà à
+isOwnedRent=Le loyer pour cette proprieté se monte à
+thankYouRent=Merci d'avoir payer le loyer 
+isNotOwned=appartient encore à la banque, Souhaites-tu l'acheter?
+youBought=Felicitations, vous êtes le proprietaire de 
 
 startMoney =30000
 goMoney = 4000
