Cleaned up somes of the classes Events uses the internationalization

--- a/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
@@ -7,6 +7,9 @@ isOwnedRent=Le loyer pour cette proprieté se monte à
 thankYouRent=Merci d'avoir payer le loyer 
 isNotOwned=appartient encore à la banque, Souhaites-tu l'acheter?
 youBought=Felicitations, vous êtes le proprietaire de 
+payButton=payer
+buyButton=acheter
+continueButton=continuer
 
 startMoney =30000
 goMoney = 4000
