--- a/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
@@ -37,3 +37,4 @@ label-hotel = Avec hotel:
 label-mortgagevalue = Valeure hypothècaire: 
 text-throwindice = Je jette les des...
 text-diceresult = La valeur de ton jet est 
+text-quitgame = Est tu vraiement sûre de terminer le jeux?
