SellHotelRow, SellHouseRow, BuyHouseRow, BuyHotelRow implemented

--- a/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
@@ -164,7 +164,7 @@ tile8-coordY = 10
 tile8-rgb = 0x00FFFF
 
 
-tile9-name = Oriental Avenue
+tile9-name = Connecticut Avenue
 tile9-price = 120
 tile9-houseCost = 50
 tile9-hotelCost = 50
