--- a/monopoly/src/ch/bfh/monopoly/resources/gui_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/gui_en.properties
@@ -35,6 +35,8 @@ label-threehouses = With 3 houses:
 label-fourhouses = With 4 houses: 
 label-hotel = With hotel: 
 label-mortgagevalue = Mortgage value: 
+label-houseprice = Price of an house: 
+label-hotelprice = Price of an hotel: 
 text-throwindice = I'm throwing the dice...
 text-diceresult = The result of the throw is 
 text-quitgame = Are you really sure to leave the game?
