--- a/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
@@ -35,6 +35,8 @@ label-threehouses = Avec 3 maisons:
 label-fourhouses = Avec 4 maisons: 
 label-hotel = Avec hotel: 
 label-mortgagevalue = Valeure hypothècaire: 
+label-houseprice = Prix d'une maison: 
+label-hotelprice = Prix d'un hotel: 
 text-throwindice = Je jette les des...
 text-diceresult = La valeur de ton jet est 
 text-quitgame = Est tu vraiement sûre de terminer le jeux?
