more event work

--- a/monopoly/src/ch/bfh/monopoly/resources/events_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/events_en.properties
@@ -2,6 +2,9 @@
 #File Name : tile_en.properties
 #
 #OTHER EVENTS
+jail-name=Just Visiting
+jail-cardText=You are just visiting jail.
+
 #MOVEMENT TYPE
 goToJail-name=Go To Jail
 goToJail-cardText= You go directly to jail, do not pass go, do not collect 200 dollars
