--- a/monopoly/src/ch/bfh/monopoly/resources/events_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/events_fr.properties
@@ -2,6 +2,9 @@
 #File Name : tile_en.properties
 #
 #OTHER EVENTS
+jail-name=En visite
+jail-cardText=Vous êtes seulement en visite.
+
 #MOVEMENT TYPE
 goToJail-name=Directement en prison 
 goToJail-cardText= Directement en prison (sans passer par le «Start». Ne touche point de prime) 
@@ -9,19 +12,19 @@ goToJail-newPosition=10
 
 
 #GET VARIABLE SUM EVENT
-freeParking-name=Free Parking
-freeParking-cardText="You receive all the money that player's have paid in fees, Enjoy!"
+freeParking-name=Parc Gratuit
+freeParking-cardText=Vous recevez tous l'argent qui est dans le parc grauit
 freeParking-variableSumCode = 20
 
 incomeTax-name=Income Tax
-incomeTax-cardText="Pay income tax.  You may pay either 10% of your money, or a flat rate of $200"
+incomeTax-cardText=Pay income tax.  You may pay either 10% of your money, or a flat rate of $200"
 incomeTax-variableSumCode = 4
 
 
 #GET FIXED SUM CARDS
-go-name= GO
-go-cardText= Collect $200.00 as you pas GO!
-go-amount = 200
+go-name= Start
+go-cardText= Prélève 4000.- de salaire en passant
+go-amount = 4000
 
 #LUXURY TAX
 luxuryTax-name=Luxury Tax
@@ -33,7 +36,7 @@ luxuryTax-amount=-100
 # C H A N C E   C A R D S 
 # C H A N C E   C A R D S 
 # C H A N C E   C A R D S
-chance-name="Chance"
+chance-name=Chance
 #MOVEMENT CARDS
 chance0-name =Reculez!
 chance0-cardText = Recule de 3 casses.  
@@ -109,7 +112,7 @@ chance15-fixedSum=1000
 # C O M M U N I T Y   C H E S T   C A R D S
 # C O M M U N I T Y   C H E S T   C A R D S
 # C O M M U N I T Y   C H E S T   C A R D S
-commChest-name="Chancellerie"
+commChest-name=Chancellerie
 #MOVEMENT CARDS
 commchest0-name =«Start»
 commchest0-cardText =En route pour le  
