Tested row functionalities.

--- a/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
@@ -37,6 +37,7 @@ label-hotel = Avec hotel:
 label-mortgagevalue = Valeure hypothècaire: 
 label-houseprice = Prix d'une maison: 
 label-hotelprice = Prix d'un hotel: 
+label-owner = Proprietaire: 
 text-throwindice = Je jette les des...
 text-diceresult = La valeur de ton jet est 
 text-quitgame = Est tu vraiement sûre de terminer le jeux?
