--- a/monopoly/src/ch/bfh/monopoly/resources/gui_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/gui_en.properties
@@ -37,6 +37,7 @@ label-hotel = With hotel:
 label-mortgagevalue = Mortgage value: 
 label-houseprice = Price of an house: 
 label-hotelprice = Price of an hotel: 
+label-owner = Owner: 
 text-throwindice = I'm throwing the dice...
 text-diceresult = The result of the throw is 
 text-quitgame = Are you really sure to leave the game?
