start roll/roll for jail implemented

--- a/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
@@ -14,6 +14,7 @@ continueButton=continue
 startMoney =15000
 goMoney = 200
 
+go-cardText= Collect $200.00 as you pas GO!
 tile0-name = Go
 tile0-price = NULL
 tile0-houseCost = NULL
@@ -80,6 +81,7 @@ tile3-coordY = 10
 tile3-rgb = 0xDCD0FF
 
 #TERRAIN
+incomeTax-cardText="Pay income tax.  You may pay either 10% of your money, or a flat rate of $200"
 tile4-name = Income Tax
 tile4-price = NULL
 tile4-houseCost = NULL
@@ -180,8 +182,8 @@ tile9-coordX = 1
 tile9-coordY = 10
 tile9-rgb = 0x00FFFF
 
-
-tile10-name = Jail
+jail-cardText=You are just visiting jail.
+tile10-name = Jail / Just Visiting
 tile10-price = NULL
 tile10-houseCost = NULL
 tile10-hotelCost = NULL
@@ -346,7 +348,7 @@ tile19-coordX = 0
 tile19-coordY = 1
 tile19-rgb = 0xFFA500
 
-
+freeParking-cardText="You receive all the money that player's have paid in fees, Enjoy!"
 tile20-name = Free Parking
 tile20-price = NULL
 tile20-houseCost = NULL
@@ -514,6 +516,7 @@ tile29-coordY = 0
 tile29-rgb = 0xFFFF00
 
 
+goToJail-cardText= You go directly to jail, do not pass go, do not collect 200 dollars
 tile30-name = Go To Jail
 tile30-price = NULL
 tile30-houseCost = NULL
@@ -646,8 +649,10 @@ tile37-coordY = 7
 tile37-rgb = 0x0000FF
 
 
+#LUXURY TAX
+luxuryTax-cardText=You must pay tax on your luxuries - pay $100
 tile38-name = Luxury Tax
-tile38-price = NULL
+tile38-price = 100
 tile38-houseCost = NULL
 tile38-hotelCost = NULL
 tile38-rent = NULL
