--- a/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
@@ -14,8 +14,9 @@ continueButton=continuer
 startMoney =30000
 goMoney = 4000
 
+go-cardText= Prélève 4000.- de salaire en passant
 tile0-name = Start
-tile0-price = NULL
+tile0-price = 4000
 tile0-houseCost = NULL
 tile0-hotelCost = NULL
 tile0-rent = NULL
@@ -79,9 +80,10 @@ tile3-coordX = 7
 tile3-coordY = 10
 tile3-rgb = 0xDCD0FF
 
-#TERRAIN
+#INCOME TAX
+incomeTax-cardText=Paie soit 10% de ton argent, ou 4000.-
 tile4-name = Impôt sur le revenu
-tile4-price = NULL
+tile4-price = 4000
 tile4-houseCost = NULL
 tile4-hotelCost = NULL
 tile4-rent = NULL
@@ -180,8 +182,8 @@ tile9-coordX = 1
 tile9-coordY = 10
 tile9-rgb = 0x00FFFF
 
-
-tile10-name = Prison
+jail-cardText=Vous êtes seulement en visite.
+tile10-name = Prison / En visite
 tile10-price = NULL
 tile10-houseCost = NULL
 tile10-hotelCost = NULL
@@ -347,6 +349,7 @@ tile19-coordY = 1
 tile19-rgb = 0xFFA500
 
 
+freeParking-cardText=Vous recevez tous l'argent qui est dans le parc grauit
 tile20-name =Parc Gratuit
 tile20-price = NULL
 tile20-houseCost = NULL
@@ -514,7 +517,8 @@ tile29-coordY = 0
 tile29-rgb = 0xFFFF00
 
 
-tile30-name = Va en prison!
+goToJail-cardText= Directement en prison (sans passer par le «Start». Ne touche point de prime) 
+tile30-name = Directement en prison
 tile30-price = NULL
 tile30-houseCost = NULL
 tile30-hotelCost = NULL
@@ -645,12 +649,13 @@ tile37-coordX = 10
 tile37-coordY = 7
 tile37-rgb = 0x0000FF
 
-
-tile38-name = Impôt Supplémentaire
-tile38-price = NULL
+#LUXURY TAX
+luxuryTax-cardText=Impôt Supplémentaire. - Paie 4000.-
+tile38-name = Impôt 
+tile38-price = 4000
 tile38-houseCost = NULL
 tile38-hotelCost = NULL
-tile38-rent = 2000
+tile38-rent = NULL
 tile38-rent1house = NULL 
 tile38-rent2house = NULL
 tile38-rent3house = NULL
