--- a/monopoly/src/ch/bfh/monopoly/resources/events_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/events_en.properties
@@ -2,41 +2,25 @@
 #File Name : tile_en.properties
 #
 #OTHER EVENTS
-jail-name=Just Visiting
-jail-cardText=You are just visiting jail.
+
 
 #MOVEMENT TYPE
-goToJail-name=Go To Jail
-goToJail-cardText= You go directly to jail, do not pass go, do not collect 200 dollars
-goToJail-newPosition=10
 
 
 #GET VARIABLE SUM EVENT
-freeParking-name=Free Parking
-freeParking-cardText="You receive all the money that player's have paid in fees, Enjoy!"
-freeParking-variableSumCode = 20
 
-incomeTax-name=Income Tax
-incomeTax-cardText="Pay income tax.  You may pay either 10% of your money, or a flat rate of $200"
-incomeTax-variableSumCode = 4
+
+
 
 
 #GET FIXED SUM CARDS
-go-name= GO
-go-cardText= Collect $200.00 as you pas GO!
-go-amount = 200
-
-#LUXURY TAX
-luxuryTax-name=Luxury Tax
-luxuryTax-cardText=You must pay tax on your luxuries - pay $100
-luxuryTax-amount=-100
 
 
 
 # C H A N C E   C A R D S 
 # C H A N C E   C A R D S 
 # C H A N C E   C A R D S
-chance-name="Chance"
+chance-name=Chance
 #MOVEMENT CARDS
 chance0-name =Back you go!
 chance0-cardText = Go back 3 spaces  
