i18n for Roll window

--- a/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
@@ -1,7 +1,19 @@
 #
 #File Name : tile_en.properties
 #
-#MESSAGES 
+#MESSAGES FOR ROLLING
+roll=Roll
+rollDescription=Click Roll to move to a new tile
+youRolled= you rolled a 
+advance= advance
+spaces= spaces
+inJail= You are in Jail, you have 3 options to get out:
+outOfJail= you are out of jail!
+rollAgain=, roll again or choose another option: 
+triesRemaining= tries remaining.
+stayJail= Sorry, you must stay in jail another round
+
+#MESSAGES  FOR BUYING
 isOwned=is owned by
 isOwnedRent=The rent for this property is
 thankYouRent=Thank you for paying the rent 
