--- a/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
@@ -1,7 +1,19 @@
 #
 #File Name : tile_en.properties
 #
-#MESSAGES 
+#MESSAGES FOR ROLLING
+roll=tirer
+rollDescription=Appuye sur Tirer pour avancer
+youRolled= tu as tiré 
+advance= avance
+spaces= espaces
+inJail= Tu es en prison, il y a trois options pour sortir:
+outOfJail= Liberté!
+rollAgain=, tire de nouveau ou choisi une autre option: 
+triesRemaining= tentatives restent
+stayJail= Desolé, tu dois rester encore un tour en prison
+
+#MESSAGES  FOR BUYING
 isOwned=appartient déjà à
 isOwnedRent=Le loyer pour cette proprieté se monte à
 thankYouRent=Merci d'avoir payer le loyer 
