corrections to some events and roll windows

--- a/monopoly/src/ch/bfh/monopoly/resources/events_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/events_fr.properties
@@ -86,7 +86,7 @@ chance15-fixedSum=1000
 commChest-name=Chancellerie
 #MOVEMENT CARDS
 commchest0-name =«Start»
-commchest0-cardText =En route pour le  
+commchest0-cardText =En route pour le  start
 commchest0-newPosition =0
 
 commchest1-name =Directement en prison 
