--- a/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
@@ -99,7 +99,7 @@ tile4-name = Impôt sur le revenu
 tile4-price = 4000
 tile4-houseCost = NULL
 tile4-hotelCost = NULL
-tile4-rent = NULL
+tile4-rent = 4000
 tile4-rent1house = NULL 
 tile4-rent2house = NULL
 tile4-rent3house = NULL
