--- a/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
@@ -99,7 +99,7 @@ tile4-name = Income Tax
 tile4-price = NULL
 tile4-houseCost = NULL
 tile4-hotelCost = NULL
-tile4-rent = NULL
+tile4-rent = 200
 tile4-rent1house = NULL 
 tile4-rent2house = NULL
 tile4-rent3house = NULL
