Modified trade panel

--- a/monopoly/src/ch/bfh/monopoly/resources/gui_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/gui_en.properties
@@ -37,6 +37,10 @@ label-mortgagevalue = Mortgage value:
 label-houseprice = Price of an house: 
 label-hotelprice = Price of an hotel: 
 label-owner = Owner: 
+label-tradePl = Player:
+label-tradeJailCard = Jail Card:
+label-tradeTerrain = Terrain:
+label-tradeMoney = Money:
 text-throwindice = I'm throwing the dice...
 text-diceresult = The result of the throw is 
 text-quitgame = Are you really sure to leave the game?
