--- a/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
@@ -37,6 +37,10 @@ label-mortgagevalue = Valeure hypothècaire:
 label-houseprice = Prix d'une maison: 
 label-hotelprice = Prix d'un hotel: 
 label-owner = Proprietaire: 
+label-tradePl = Joueur:
+label-tradeJailCard = Carte Prison:
+label-tradeTerrain = Terrain:
+label-tradeMoney = Argent:
 text-throwindice = Je jette les des...
 text-diceresult = La valeur de ton jet est 
 text-quitgame = Est tu vraiement sûre de terminer le jeux?
