player quit management

--- a/monopoly/src/ch/bfh/monopoly/resources/gui_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/gui_en.properties
@@ -9,10 +9,14 @@ button-buy = Buy
 button-auction = Auction
 button-bid = Bid
 button-sendoffer = Send
+button-kick = Kick Player
+button-kickvote = Send kick vote
 tab-event = Events
 tab-card = Card
 tab-chat = Chat
 tab-trade = Trade
+label-kicktitle = Kick player by selecting the username
+label-kick = Kick Player
 label-youroffer = Your offer is
 label-requestfrompl = What do you want from player
 label-jailcard = Jail card
@@ -41,6 +45,7 @@ label-tradePl = Player:
 label-tradeJailCard = Jail Card:
 label-tradeTerrain = Terrain:
 label-tradeMoney = Money:
+label-kick = Kick player
 text-throwindice = I'm throwing the dice...
 text-diceresult = The result of the throw is 
 text-quitgame = Are you really sure to leave the game?
