--- a/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
@@ -9,10 +9,14 @@ button-buy = Achter
 button-auction = Enchère
 button-bid = Offrir
 button-sendoffer = Envoier
+button-kick = Tuer joueur
 tab-event = Événements
 tab-card = Carte
 tab-chat = Chat
 tab-trade = Commerce
+label-kicktitle = Tu peut tuer un joueur en sélectionnent le nom
+label-kick = Tuer joueur
+button-kickvote = Envoier kick joueur
 label-youroffer = Tu offres
 label-requestfrompl = Tu veut recevoir
 label-jailcard = Carte prison
