netMessage for TradeRequests

--- a/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_en.properties
@@ -12,6 +12,8 @@ outOfJail= you are out of jail!
 rollAgain=, roll again or choose another option: 
 triesRemaining= tries remaining.
 stayJail= Sorry, you must stay in jail another round
+pay=pay
+card=card
 
 #MESSAGES  FOR BUYING
 isOwned=is owned by
