--- a/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/tile_fr.properties
@@ -12,6 +12,8 @@ outOfJail= Liberté!
 rollAgain=, tire de nouveau ou choisi une autre option: 
 triesRemaining= tentatives restent
 stayJail= Desolé, tu dois rester encore un tour en prison
+pay=paie
+card=carte
 
 #MESSAGES  FOR BUYING
 isOwned=appartient déjà à
