--- a/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
@@ -45,6 +45,7 @@ label-tradePl = Joueur:
 label-tradeJailCard = Carte Prison:
 label-tradeTerrain = Terrain:
 label-tradeMoney = Argent:
+label-tradearrived = Requet de commerce
 text-throwindice = Je jette les des...
 text-diceresult = La valeur de ton jet est 
 text-quitgame = Est tu vraiement sûre de terminer le jeux?
