Fixed problem in trade Added panel for give the answer of kick player

--- a/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
@@ -46,6 +46,7 @@ label-tradeJailCard = Carte Prison:
 label-tradeTerrain = Terrain:
 label-tradeMoney = Argent:
 label-tradearrived = Requet de commerce
+label-tradeans = Reponse de commerce
 text-throwindice = Je jette les des...
 text-diceresult = La valeur de ton jet est 
 text-quitgame = Est tu vraiement sûre de terminer le jeux?
