--- a/monopoly/src/ch/bfh/monopoly/resources/gui_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/gui_en.properties
@@ -46,6 +46,7 @@ label-tradeJailCard = Jail Card:
 label-tradeTerrain = Terrain:
 label-tradeMoney = Money:
 label-kick = Kick player
+label-tradeans = Trade answer
 label-tradearrived = Trade request
 text-throwindice = I'm throwing the dice...
 text-diceresult = The result of the throw is 
