--- a/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
@@ -47,6 +47,11 @@ label-tradeTerrain = Terrain:
 label-tradeMoney = Argent:
 label-tradearrived = Requet de commerce
 label-tradeans = Reponse de commerce
+label-tradeaccepted = Le commerce a été accepté
+label-traderefused = Le commerce a été refusé
+
+
+
 text-throwindice = Je jette les des...
 text-diceresult = La valeur de ton jet est 
 text-quitgame = Est tu vraiement sûre de terminer le jeux?
