--- a/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
@@ -50,7 +50,11 @@ label-tradeans = Reponse de commerce
 label-tradeaccepted = Le commerce a été accepté
 label-traderefused = Le commerce a été refusé
 
-
+label-tradereceived = Tu as reçu une requet de commerce de
+label-offercontent = Offer 
+label-demandcontenr = Demand
+label-tradeJailCardIsHere = Carte prison
+jdialog-tradeErrorParameter = SVP contrôler les paramétrés inséré
 
 text-throwindice = Je jette les des...
 text-diceresult = La valeur de ton jet est 
