--- a/monopoly/src/ch/bfh/monopoly/resources/gui_en.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/gui_en.properties
@@ -54,7 +54,7 @@ label-tradearrived = Trade request
 
 label-tradereceived = You received a trade request from 
 label-offercontent = Offer 
-label-demandcontenr = Demand
+label-demandcontent = Demand
 label-tradeJailCardIsHere = Jail Card
 jdialog-tradeErrorParameter = Please check the parameters of your offer.
 
