--- a/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
+++ b/monopoly/src/ch/bfh/monopoly/resources/gui_fr.properties
@@ -52,9 +52,12 @@ label-traderefused = Le commerce a été refusé
 
 label-tradereceived = Tu as reçu une requet de commerce de
 label-offercontent = Offer 
-label-demandcontenr = Demand
+label-demandcontent = Demand
 label-tradeJailCardIsHere = Carte prison
 jdialog-tradeErrorParameter = SVP contrôler les paramétrés inséré
+
+button-accept = Accept
+button-refuse = Refuse
 
 text-throwindice = Je jette les des...
 text-diceresult = La valeur de ton jet est 
